Thu Apr  2 16:26:59 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* common.mk, tool/mkconfig.rb: check the running ruby version in
	  rbconfig.rb with the program version, as RUBY_VERSION has never
	  been affected by --with-ruby-version option.
	  [ruby-core:68639] [Bug #11002]

	* configure.in (LIBRUBY_DLDFLAGS): compatibility_version must be
	  valid version numbers, not an arbitrary string.

Wed Apr  1 11:09:15 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* dir.c (push_glob): remove indirect links of arguments for
	  trampoline.

Wed Apr  1 09:59:12 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/fileutils.rb (FileUtils#mv): show the exact target path in
	  the error message instead of the destination parent directory
	  name.  patched by Joao Britto <jabcalves AT gmail.com> at
	  [ruby-core:68706].  [Bug #11021]

Tue Mar 31 15:25:07 2015  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>

	* doc/ChangeLog-0.06_to_0.52: added archived Changelog.
	  [ruby-list:50105]
	* doc/ChangeLog-0.50_to_0.60: ditto.
	* doc/ChangeLog-0.60_to_1.1: ditto.

Mon Mar 30 22:02:55 2015  Kazuhiro NISHIYAMA  <zn@mbf.nifty.com>

	* README.EXT.ja: add redirect [ruby-core:68631]

Mon Mar 30 14:42:41 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* win32/win32.c (fileattr_to_unixmode, winnt_lstat): deal with
	  symbolic link than directory, and set executable bits.

Mon Mar 30 11:27:54 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* io.c (copy_stream_body): use the arguments without conversion if
	  having read, readpartial, and write methods, than conversion by
	  to_path method.  [ruby-core:68676] [Bug #11015]

Sun Mar 29 21:08:37 2015  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>

	* gc.c (objspace_allrefs_destruct_i): fix a typo.
	  [Bug #11013]

Sun Mar 29 11:51:32 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* proc.c (proc_binding): replicate env from method object, and
	  allocate the local variable area for the iseq local table.
	  [ruby-core:68673] [Bug #11012]
